[gd_scene load_steps=8 format=3 uid="uid://bgtp0ya0p67a"]

[ext_resource type="Script" path="res://Towers/minigun.gd" id="1_tkjdu"]
[ext_resource type="Texture2D" uid="uid://lkkr4v33sumi" path="res://Assets/minigun_frames/minigunstart.png" id="2_7bn7x"]
[ext_resource type="PackedScene" uid="uid://ctpmsrrn0x3o6" path="res://Towers/health_module.tscn" id="2_s1yad"]
[ext_resource type="Texture2D" uid="uid://bfkpceopqbmwg" path="res://Assets/minigun_frames/minigunend.png" id="3_dwial"]

[sub_resource type="SpriteFrames" id="SpriteFrames_jh7h3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_7bn7x")
}, {
"duration": 1.0,
"texture": ExtResource("3_dwial")
}],
"loop": true,
"name": &"shooting",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m8co2"]
size = Vector2(29, 14)

[sub_resource type="CircleShape2D" id="CircleShape2D_6oipa"]
radius = 83.006

[node name="minigun" type="StaticBody2D"]
collision_mask = 3
script = ExtResource("1_tkjdu")

[node name="minigun_shooting" type="AnimatedSprite2D" parent="."]
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_jh7h3")
animation = &"shooting"
autoplay = "shooting"
frame_progress = 0.676993

[node name="Aim" type="Marker2D" parent="."]
position = Vector2(15, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 1)
shape = SubResource("RectangleShape2D_m8co2")

[node name="Tower" type="Area2D" parent="."]
collision_mask = 3

[node name="Tower_Area" type="CollisionShape2D" parent="Tower"]
shape = SubResource("CircleShape2D_6oipa")

[node name="Bullet_Container" type="Node" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="HealthModule" parent="." instance=ExtResource("2_s1yad")]
health = 500
maxHealth = 500

[connection signal="body_entered" from="Tower" to="." method="_on_tower_body_entered"]
[connection signal="body_exited" from="Tower" to="." method="_on_tower_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
